--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,22 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
+.cell{
+    height: 200px;
+    background: grey;
+    border: 1px solid black;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 4em;
+}
+.cell--winner{
+    border: 3px solid green;
+}
+button:disabled{
+    background-color:#343A40;
+    color: #fff;
+}
 /* 
 
     You can write your own styles here...
