--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,11 +11,23 @@
     font-size: 4em;
 }
 .cell--winner{
-    border: 3px solid green;
+    background: green !important;
 }
 button:disabled{
     background-color:#343A40;
     color: #fff;
+}
+.custom-dialog{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba($color: #000000, $alpha: 0.5);
+    z-index: 999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 /* 
 
